<resources>
    <string name="app_name">FeedTheCat</string>
    <string name="question_text">Canberra is the capital of Australia.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="feed_button">Feed</string>

    <string name="btn_start">START</string>

    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>

    <string name="result_title">GAME OVER</string>
    <string name="result_score">%d</string>
    <string name="high_score">High Score : %d</string>
    <string name="btn_try_again">MENU</string>
    <string name="info_icon">Developer info</string>

    <string name="share_result">Share my result</string>

    <string name="widget_stub">User got 0 score!</string>
    <string name="greeting_string">Greetings, %1$s!</string>
    <string name="history_icon">history icon</string>
    <string name="help_string">Help</string>
    <string name="dots_string">dots</string>
    <string name="date_string">Date</string>
    <string name="score_string">Score</string>
    <string name="achievement_title_string">Achievement title</string>
    <string name="achievemnt_desc_string">Description</string>

</resources>